tests/specs/export_default_expr.txt
# mod.ts
export default "foo";

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export default "foo";
  | ^

# output.txt
Defined in file:///mod.ts:0:1

var default: "foo"


# output.json
[
  {
    "name": "default",
    "isDefault": true,
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "variable",
        "def": {
          "tsType": {
            "repr": "foo",
            "kind": "literal",
            "value": {
              "kind": "string",
              "string": "foo"
            }
          },
          "kind": "var"
        }
      }
    ]
  }
]
